# ESP32-PlantMonitor

./: README.md  hacs.json
.github/workflows/: firmware.yml
custom_components/plant_monitor/: __init__.py  binary_sensor.py  config_flow.py  const.py  helpers.py  manifest.json  number.py  sensor.py  text.py
custom_components/plant_monitor/translations/: de.json  en.json
docs/: hardware_xiao_esp32c6.md  homeassistant.md
docs/examples/: plant_monitor_devices.json
firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  pm_adc.c  pm_adc.h  pm_config.c  pm_config.h  pm_log.c  pm_log.h  pm_main.c  pm_mqtt.c  pm_mqtt.h  pm_wifi.c  pm_wifi.h
